2006-10-31  Geoffrey Keating  <geoffk@apple.com>

	* gcc.dg/inline-16.c: New.

	PR 16622
	* gcc.dg/inline-10.c (main): Don't declare 'main' inline without
	defining it.
	* gcc.dg/inline-13.c: New.
	* gcc.dg/inline-14.c: New.
	* gcc.dg/inline-15.c: New.

	PR 11377
	* gcc.dg/inline6.c: New.
	* gcc.dg/inline7.c: New.

2006-10-31  Roger Sayle  <roger@eyesopen.com>

	PR middle-end/23470
	* gcc.dg/pr23470-1.c: New test case.

2006-11-01  Bernhard Fischer  <aldot@gcc.gnu.org>

	PR fortran/29537
	* gfortran.dg/blockdata_1.f90: Add warning about blank common in block
	data.
	* gfortran.dg/blockdata_2.f90: New testcase.

2006-10-31  Thomas Koenig  <Thomas.Koenig@online.de>

	PR libfortran/29627
	* gfortran.dg/unf_short_record_1.f90:  New test.

2006-10-31  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	PR fortran/29067
	* gfortran.dg/pr29067.f: New test.

2006-10-31  Joseph Myers  <joseph@codesourcery.com>
            Richard Sandiford  <richard@codesourcery.com>

	* lib/target-supports.exp (get_compiler_messages): Append options
	as a single list element.
	(check_effective_target_arm_vfp_ok): New.
	* gcc.dg/arm-vfp1.c: Use arm_vfp_ok.

2006-10-31  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/29387
	* gfortran.dg/intrinsic_actual_2.f90: New test.

	PR fortran/29490
	* gfortran.dg/actual_array_interface_1.f90: New test.

	PR fortran/29641
	* gfortran.dg/used_types_11.f90: New test.
	
2006-10-30  Dirk Mueller  <dmueller@suse.de>

	* g++.old-deja/g++.pt/eichin01a.C (main): Fix prototype.
	* g++.old-deja/g++.pt/eichin01b.C (main): Same.
	* g++.old-deja/g++.pt/eichin01.C (main): Same.
	* g++.old-deja/g++.mike/net25.C (main): Same.
	* g++.dg/lookup/exception1.C (main): Same.
	* g++.dg/parse/parens2.C (main): Same.

2006-10-30  Roger Sayle  <roger@eyesopen.com>

	* gcc.target/i386/pr27827.c: Explicitly specify -mfpmath=387.

2006-10-30  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gcc.dg/torture/builtin-math-2.c: Add tgamma tests.
	* gcc.dg/torture/builtin-math-3.c: Likewise.